--- a/src/app/user-input/user-input.component.html
+++ b/src/app/user-input/user-input.component.html
@@ -1,22 +1,22 @@
-<form action="">
+<form (ngSubmit)=  "onSubmit()">
   <div class="input-group">
     <p>
       <label for="initial-investement">Intial Investment</label>
-      <input id="initial-investement" ,type="number" />
+      <input id="initial-investement" name="initial-investement" type="number" [(ngModel)]="enteredInitialInvestment" />
     </p>
     <p>
       <label for="annual-investement">Annual Investment</label>
-      <input id="annual-investement" ,type="number" />
+      <input id="annual-investement" name ="annual-investment" type="number" [(ngModel)]="enteredAnnualInvestemnt" />
     </p>
   </div>
   <div class="input-group">
     <p>
       <label for="expected-return">Expected Return</label>
-      <input id="expected-return" ,type="number" />
+      <input id="expected-return" name="expected-return" type="number" [(ngModel)]="enteredExpectedReturn" />
     </p>
     <p>
       <label for="duration">Duration</label>
-      <input id="duration" ,type="number" />
+      <input id="duration" name="duration" type="number" [(ngModel)]="enteredDuration" />
     </p>
   </div>
   <p>
