--- a/src/app/investment-result/investment-result.html
+++ b/src/app/investment-result/investment-result.html
@@ -1,4 +1,4 @@
-@if (!result) {
+@if (!results) {
   <p class="center">Please Enter some values and press "Calculate"</p>
 } @else {
   <table>
@@ -12,11 +12,15 @@
     </tr>
     </thead>
     <tbody>
-    <tr>
-      <td>
-
-      </td>
-    </tr>
+      @for (result of results; track result.year){
+        <tr>
+          <td>{{result.year}}</td>
+          <td>{{result.valueEndOfYear | currency}}</td>
+          <td>{{result.interest | currency}}</td>
+          <td>{{result.totalInterest | currency}}</td>
+          <td>{{result.totalAmountInvested | currency}}</td>
+        </tr>
+      }
     </tbody>
   </table>
 
